--- a/Topic-11-Confidence-Intervals-Proportion.rmd
+++ b/Topic-11-Confidence-Intervals-Proportion.rmd
@@ -6,8 +6,9 @@ output:
   markdown::html_format:
     keep_md: true
     meta:
-      css: [default, slides, "Assets/css/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
-      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "Assets/js/lastupdated.js", "Assets/js/mathjax-font.js"]
+      css: [default, slides, "meta-data/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
+      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "meta-data/lastupdated.js", "meta-data/mathjax-font.js"]
+      header-includes: "meta-data/Hypothesis-config.html"
     options:
       number_sections: true
       latex_math: true
@@ -41,10 +42,10 @@ library(latex2exp)
 ## Confidence Interval for a Proportion (1 of 2)
 
 - Recall that the standard error of sample proportions is $\sigma_{\hat{P}}=\sqrt{\frac{p(1-p)}{n}}$, where $n$ is the sample size and $p$ is the population proportion. As a consequence, when estimating the population proportion $p$, we only have a point estimate $\hat{p}$ (phat) to use. For the standard error, we use the estimation
-  $$\sigma_{\hat{p}}\approx\hat{\sigma}_{\hat{p}}=\sqrt{\dfrac{\hat{p}(1-\hat{p})}{n}}.$$
+  $$\textstyle \sigma_{\hat{p}}\approx\hat{\sigma}_{\hat{p}}=\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}.$$
 
 - Based on the central limit theorem, when $n$ is large enough, at the $100(1-\alpha)\%$ level, the margin of error for $p$ is defined as
-  $$E=z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$$
+  $$\textstyle E=z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$$
   In Excel, $z_{\alpha/2}$=`NORM.S.INV((1 + confidence level)/2)`. The marginal error can also be obtained by
   `CONFIDENCE.NORM(1-confidence level, SQRT(phat*(1-phat)/n, n)`.
 
@@ -66,12 +67,17 @@ library(latex2exp)
 
 ## Distribution of Confidence Interval
 
-By the central limit theorem, the random variable $\hat{p}$ is normally distributed. The chance that $p\in \left[\hat{p}-z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}, \hat{p}+z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}\right]$ is the same as the chance that $\hat{p}\in \left[p-z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}, p+z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}\right]$. That shows $z_{\alpha/2}$ satisfying
-$$P(-z_{\alpha/2}<\dfrac{\hat{p}-p}{\sqrt{\frac{p(1-p)}{n}}<z_{\alpha/2})=1-\alpha.$$
+By the central limit theorem, the random variable $\hat{p}$ is normally distributed. The chance that
+$$p\in \left[\hat{p}-z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}, \hat{p}+z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}\right]$$
+is the same as the chance that
+$$\hat{p}\in \left[p-z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}, p+z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}\right].$$
+
+It follows that $z_{\alpha/2}$ satisfies the following equation
+$$P(-z_{\alpha/2}<\dfrac{\hat{p}-p}{\sqrt{\frac{p(1-p)}{n}}}<z_{\alpha/2})=1-\alpha.$$
 
 ---
 
-## Example: Estimating the Proportion of Students Taking Busses (1 of 2)
+## Example: Proportion of Students Taking Busses (1 of 2)
 
 In a random sample of 100 students in college, 65 said that they come to college by bus.
 
@@ -86,12 +92,12 @@ $$\hat{\sigma}_{\hat{P}}=\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}=\sqrt{\frac{0.65(1-
 
 ---
 
-## Example: Estimating the Proportion of Students Taking Busses (2 of 2)
+## Example: Proportion of Students Taking Busses (2 of 2)
 
 At 99% level of confidence, the value $1-\alpha/2=(1+\text{confidence level})/2=(1+0.99)/2=0.995$. The critical value $z_{\alpha/2}$ is determined by the equation $P(Z<z_{\alpha/2})=0.9955$. Using the Excel function `NORM.S.INV(0.995)`, we find the critical value \\(z_{\alpha/2}\approx 2.576\\).
 
 Thus the marginal error is
-$$E=z_{\alpha/2}\cdot \hat{\sigma}_{\hat{P}}=`r round(qnorm(1-0.01/2,0,1),3)`\cdot `r round(sqrt(0.65*(1-0.65)/100), 3)`=`r busME=round(qnorm(1-0.01/2,0,1)*sqrt(0.65*(1-0.65)/100), 3); busME`,$$
+$E=z_{\alpha/2}\cdot \hat{\sigma}_{\hat{P}}=`r round(qnorm(1-0.01/2,0,1),3)`\cdot `r round(sqrt(0.65*(1-0.65)/100), 3)`=`r busME=round(qnorm(1-0.01/2,0,1)*sqrt(0.65*(1-0.65)/100), 3); busME`,$
 and the confidence interval at 99% level is
 $$[\hat{p}-E, \hat{p}+E]\approx [0.65-`r busME`, 0.65+`r busME`]=[`r 0.65- busME`, `r 0.65+busME`].$$
 
@@ -141,9 +147,7 @@ Suppose you want to estimate the proportion of students at QCC who live in Queen
 
 At the 95% level, the critical value is $z_{\alpha/2}=$ `NORM.S.INV((1+0.95)/2)` $\approx 1.96$.
 
-The marginal error is $E=0.02$.
-
-Then the appropriate minimal sample size is determined by
+Since the marginal error is $E=0.02$, the appropriate minimal sample size is determined by
 $$n=\left(\frac{z_{\alpha/2}}{{E}}\right)^2\cdot \hat{p}(1-\hat{p})=(1.96/0.02)^2\cdot 0.7\cdot(1-0.7)=2016.84.$$
 
 Since the sample size has to be an integer, to get a error no more than 2% at the level 95%,  the minimal sample size should be at least 2017.
@@ -167,7 +171,7 @@ To get a error no more than 0.2 at the level 95%,  the minimal sample size shoul
 
 ---
 
-## Practice: Confidence Interval of Proportion of Kids
+## Practice: Confidence Interval of Proportion of Kids {.unnumbered}
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=7347&seed=2020&showansafter', height='560px')`
@@ -175,7 +179,7 @@ To get a error no more than 0.2 at the level 95%,  the minimal sample size shoul
 
 ---
 
-## Practice: Confidence Intervals for Product Quality
+## Practice: Confidence Intervals for Product Quality {.unnumbered}
 
 To understand the reason for returned goods, the manager of a store examines the records on 40 products that were returned in the last year. Reasons were coded by 1 for “defective,” 2 for “unsatisfactory,” and 0 for all other reasons, with the results shown in the table.
 
@@ -203,7 +207,7 @@ kable(returned.df, col.names = NULL, escape = F, align = "c", "html", booktabs =
 
 ---
 
-## Practice: Sample Size for Mean with Given Error
+## Practice: Sample Size for Mean with Given Error {.unnumbered}
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=19799&seed=2020&showansafter', height='560px')`
@@ -211,7 +215,7 @@ kable(returned.df, col.names = NULL, escape = F, align = "c", "html", booktabs =
 
 ---
 
-## Practice: Sample Size for Proportion with Given Error
+## Practice: Sample Size for Proportion with Given Error {.unnumbered}
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=7348&seed=2020&showansafter', height='560px')`
@@ -219,7 +223,7 @@ kable(returned.df, col.names = NULL, escape = F, align = "c", "html", booktabs =
 
 ---
 
-## Practice: Confidence Interval of Proportion Given Table
+## Practice: Confidence Interval of Proportion Given Table {.unnumbered}
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=213816&seed=2020&showansafter', height='560px')`
@@ -227,13 +231,15 @@ kable(returned.df, col.names = NULL, escape = F, align = "c", "html", booktabs =
 
 ---
 
-<!-- # class = "center middle" -->
+<!--# class="center middle" -->
 
-# Lab Instructions in Excel {.unnumbered}
+::: {.part}
+Lab Instructions in Excel
+:::
 
 ---
 
-## Excel Functions for Normal Distributions and Marginal Errors
+## Normal Distributions and Marginal Errors
 
 - When a cumulative probability $p=P(Z<z)$ of a standard normal random variable $Z$ is given, we can find $z$ using `NORM.S.INV(p)`.
 
@@ -242,7 +248,7 @@ kable(returned.df, col.names = NULL, escape = F, align = "c", "html", booktabs =
 
 ---
 
-## Lab Practice: Confidence Interval for Proportion
+## Lab Practice: Confidence Interval for Proportion {.unnumbered}
 
 Foothill College’s athletic department wants to calculate the proportion of students who have attended a women’s basketball game at the college. They use student email addresses, randomly choose 220 students, and email them. Of the 145 who responded, 22 had attended a women’s basketball game.
 
