--- a/Topic-12-Concepts-of-Hypothesis-Testing.rmd
+++ b/Topic-12-Concepts-of-Hypothesis-Testing.rmd
@@ -6,8 +6,9 @@ output:
   markdown::html_format:
     keep_md: true
     meta:
-      css: [default, slides, "Assets/css/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
-      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "Assets/js/lastupdated.js", "Assets/js/mathjax-font.js"]
+      css: [default, slides, "meta-data/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
+      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "meta-data/lastupdated.js", "meta-data/mathjax-font.js"]
+      header-includes: "meta-data/Hypothesis-config.html"
     options:
       number_sections: true
       latex_math: true
@@ -22,6 +23,8 @@ knitr::opts_chunk$set(comment="#", fig.retina=2, crayon.enabled = TRUE, dpi=600)
 set.seed(15)
 library(knitr)
 library(ggplot2)
+library(kableExtra)
+library(formattable)
 library(dplyr,warn.conflicts = FALSE)
 library(latex2exp)
 ```
@@ -32,15 +35,15 @@ $$\definecolor{purple}{RGB}{226, 15, 233}$$
 $$\definecolor{grey}{RGB}{177, 159, 149}$$
 </div>
 
-## Learning Goals for Hypothesis Tests
+## Learning Goals
 
 - Choose appropriate null and alternative hypotheses.
 
 - Determine whether the test should be one-sided or two-sided.
 
-- Calculate $Z$-test statistics and $T$-test statistics.
+- Calculate $Z$-test statistics and $t$-test statistics.
 
-- Calculate the $P$-value<.
+- Calculate the $P$-value.
 
 - Determine whether to reject or fail reject the alternative hypotheses.
 
@@ -52,13 +55,13 @@ $$\definecolor{grey}{RGB}{177, 159, 149}$$
 
 - The testing procedure starts with an initial assumption that the statement on population parameter is true.
 
-- We test this initial assumption using a random sample. If the initial assumption is really the truth, then the test statistic from a random sample shouldn't be too far away from the center of the sampling distribution. Conversely, if the test statistic is .green[too far away] from the center, then we should .green[not believe in] the initial assumption.
+- We test this initial assumption using a random sample. If the initial assumption is really the truth, then the test statistic from a random sample shouldn't be too far away from the center of the sampling distribution. Conversely, if it is <span class="green">too far away</span>, then we should <span class="green">not believe in</span> the initial assumption.
 
 - To determine how far is too far away, we need to specify a threshold, a prior probability, or equivalently a critical value.
 
-- If the test statistic is at least extreme as the critical value, then the testing is significant enough to allow us to reject the initial assumption. Otherwise, we cannot draw a definite conclusion.
+- If the test statistic is at least extreme as the critical value, then the test is significant enough to allow us to reject the initial assumption. Otherwise, we cannot draw a definite conclusion.
 
-- The prior probability measures the chance that the initial assumption was wrongly rejected.
+- The prior probability measures the chance the initial assumption was wrongly rejected.
 
 ---
 
@@ -76,7 +79,7 @@ $$\definecolor{grey}{RGB}{177, 159, 149}$$
 
 ---
 
-## Example: Identify the Null and the Alternative Hypotheses
+## Example: Identify Null and Alternative Hypotheses
 
 1. Test a statement that the population mean is 1.
 2. Test a statement that the population mean is more than 3.
@@ -84,9 +87,9 @@ $$\definecolor{grey}{RGB}{177, 159, 149}$$
 
 **Solution:** Keep in mind that the null hypothesis should always contains the equal sign. The alternative hypothesis is contrary to the null hypothesis.
 
-1. We may set set the null hypothesis as $H_0$: $μ = 1$. Depending on the given information, otherwise, we may set the alternative hypothesis as $H_a$: $μ\ne 1$.
-2. We may set set the null hypothesis as $H_0$: $μ = 3$ and the alternative hypothesis as $H_a$: $μ>3$.
-3. We may set set the null hypothesis as $H_0$: $μ \le 3$ and the alternative hypothesis as $H_a$: $μ>3$.
+1. We may set the null hypothesis as $H_0$: $μ = 1$. Depending on the given information, otherwise, we may set the alternative hypothesis as $H_a$: $μ\ne 1$.
+2. We may set the null hypothesis as $H_0$: $μ = 3$ and the alternative hypothesis as $H_a$: $μ>3$.
+3. We may set the null hypothesis as $H_0$: $μ \le 3$ and the alternative hypothesis as $H_a$: $μ>3$.
 
 ---
 
@@ -96,8 +99,8 @@ The logic of hypothesis testing and two types of error can be summarized in the 
 
 ```{r HypoTest, echo=F}
 row1 <- c("", "\\(H_0\\) is true", "\\(H_0\\) is false")
-row2 <- c("Reject \\(H_0\\)", ".red[Type I Error]", ".green[Correct decision]")
-row3 <- c("Fail to Reject \\(H_0\\)", ".green[Correct decision]", ".red[Type II Error]")
+row2 <- c("Reject \\(H_0\\)", "<span class=\"red\">Type I Error</span>", "<span class=\"green\">Correct decision</span>")
+row3 <- c("Fail to Reject \\(H_0\\)", "<span class=\"green\">Correct decision</span>", "<span class=\"red\">Type II Error</span>")
 
 tb <- rbind(row2, row3)
 
@@ -114,8 +117,8 @@ The interpretation of hypothesis testing is summarized in the following table.
 
 ```{r HypoTestDec, echo=F}
 rowa <- c("", "If the claim to be tested is in \\(H_0\\)", "If the claim to be tested is in \\(H_a\\)")
-rowb <- c("Reject \\(H_0\\)", ".green[There is enough evidence to reject the claim]", ".green[There is enough evidence to support the claim]")
-rowc <- c("Fail to Reject \\(H_0\\)", ".blue[There is not enough evidence to reject the claim]", ".blue[There is not enough evidence to support the claim]")
+rowb <- c("Reject \\(H_0\\)", "<span class=\"green\">There is enough evidence to reject the claim</span>", "<span class=\"green\">There is enough evidence to support the claim</span>")
+rowc <- c("Fail to Reject \\(H_0\\)", "<span class=\"blue\">There is not enough evidence to reject the claim</span>", "<span class=\"blue\">There is not enough evidence to support the claim</span>")
 
 tbd <- rbind(rowb, rowc)
 
@@ -132,7 +135,7 @@ kable(tbd, format = "html", escape=F)%>%
 
 ## Type of Errors in Hypothesis Testing
 
-- Rejecting the null hypothesis when it is indeed true is called a **type I error**. The maximum allowable probability of making a type I error is called the **level of significance**, denoted by $\alpha$.
+- Rejecting the null hypothesis when it is indeed true is called a **type I error**. The maximum allowable probability of making a type I error is the **level of significance**, denoted by $\alpha$.
 
 - Failing to reject the null hypothesis when the it is false is called a **type II error**. The probability of a type II error is usually denoted by $\beta$. The **power of a hypothesis test**, equals $1-\beta$, is the probability of rejecting the null hypothesis when it is false.
 
@@ -167,7 +170,7 @@ See also [the interactive demonstration of errors and the power](https://istats.
 
   ::: {.center}
   |Sign in $H_a$ | $\ne$ | $<$ | $>$  |
-  |---|---|---|
+  |---|---|---|---|
   | $P$-value  | Double of the tail area | Left tail area | Right tail area |
   :::
 
@@ -200,20 +203,15 @@ Since the $P$-value is smaller than $\alpha$, we reject the null hypothesis $H_0
 
 ---
 
-## Practice: Conceptual Understanding on Hypothesis Testing
+## Practice: Conceptual Understanding {.unnumbered}
 
 Decide whether the following statements are true or false. Explain your reasoning.
 
 - In case of a left-tailed test, we reject the null hypothesis if the sample statistic is significantly smaller than the hypothesized population parameter.
-
 - A $P$-value of 0.08 is more evidence against the null hypothesis than a $P$-value of 0.04.
-
 - The statement, "the $P$-value is 0.03", is equivalent to the statement, "there is a 3% probability that the null hypothesis is true".
-
 - Even though you rejected the null hypothesis, it may still be true.
-
 - Failing to reject null hypothesis means the null hypothesis is true.
-
 - That the $P$-value of a sample statistic is $p=0$ means the null hypothesis cannot be true.
 
 ::: {.footmark}
@@ -222,7 +220,7 @@ Questions are partially taken from [Conceptual questions on hypothesis testing](
 
 ---
 
-## Practice: Identify Hypotheses and and Determine the Type of Test
+## Practice: Determine the Type of Test {.unnumbered}
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=168392&seed=2020&showansafter', height='560px')`
@@ -230,7 +228,7 @@ Questions are partially taken from [Conceptual questions on hypothesis testing](
 
 ---
 
-## Practice: Find the $P$-value
+## Practice: Find the $P$-value {.unnumbered}
 
 Suppose we’re conducting a hypothesis testing for a population mean. Find the $P$-value for each of the following testing scenario with the given sample size $n$ and the test statistics $t$.
 
@@ -240,7 +238,7 @@ Suppose we’re conducting a hypothesis testing for a population mean. Find the 
 
 ---
 
-## Practice: Make a Decision Based on the $P$-value
+## Practice: Make a Decision {.unnumbered}
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=462486&seed=2020&showansafter', height='560px')`
@@ -248,7 +246,7 @@ Suppose we’re conducting a hypothesis testing for a population mean. Find the 
 
 ---
 
-## Practice: Interpret a Decision
+## Practice: Interpret a Decision {.unnumbered}
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=336259&seed=2020&showansafter', height='560px')`
@@ -256,7 +254,7 @@ Suppose we’re conducting a hypothesis testing for a population mean. Find the 
 
 ---
 
-<!-- # class = "center middle" -->
+<!--# class="center middle" -->
 
 ::: {.part}
 Lab Instructions in Excel
@@ -264,9 +262,9 @@ Lab Instructions in Excel
 
 ---
 
-## Excel Functions for Normal Distributions
+## Normal Distribution for Hypothesis Testing
 
-- Let $Z$ be a standard normal random varaible. In Excel, $P(Z<z)$ is given by `NORM.S.DIST(z,TRUE)`.
+- Let $Z$ be a standard normal random variable. In Excel, $P(Z<z)$ is given by `NORM.S.DIST(z,TRUE)`.
 
 - Let $X$ be a normal random variable with mean $\mu$ and standard deviation $\sigma$, that is $X\sim \mathcal{N}(\mu, \sigma^2)$. In Excel, $P(X<x)$ is given by `NORM.DIST(x,mean,sd,TRUE)`.
 
@@ -276,17 +274,17 @@ Lab Instructions in Excel
 
 ---
 
-## Excel Functions for $T$-Distributions
+## $t$-Distribution for Hypothesis Testing
 
-Suppose a Student's $T$-distribution has the degree of freedom $\text{df}=n-1$.
+Suppose a Student's $t$-distribution has the degree of freedom $\text{df}=n-1$.
 
-- To find a probability for a given $T$-value
+- To find a probability for a given $t$-value
 
-  - The area of the left tail of the $T$-value may be calculated by the function `T.DIST(t,df,true)`.
+  - The area of the left tail of the $t$-value may be calculated by the function `T.DIST(t,df,true)`.
 
-  - The area of the right tail of the $T$-value may be calculated by the function `T.DIST.RT(t, df)`.
+  - The area of the right tail of the $t$-value may be calculated by the function `T.DIST.RT(t, df)`.
 
-  - The area of two tails of the $T$-value (\\(t>0\\)) may be calculated by function `T.DIST.2T(t,df)`.
+  - The area of two tails of the $t$-value (\\(t>0\\)) may be calculated by function `T.DIST.2T(t,df)`.
 
 - To find the critical value for a given probability $p$
 
@@ -296,7 +294,7 @@ Suppose a Student's $T$-distribution has the degree of freedom $\text{df}=n-1$.
 
 ---
 
-## Lab Practice: Testing Mean with $\sigma$
+## Lab Practice: Testing Mean with $\sigma$ {.unnumbered}
 
 Suppose the population standard deviation is $\sigma=4.3$. At the significance level $\alpha=0.02$, construct the a standardized rejection region for the following test for the population mean
 
