--- a/Topic-13-Hypothesis-Testing-Mean-Proportion.rmd
+++ b/Topic-13-Hypothesis-Testing-Mean-Proportion.rmd
@@ -6,8 +6,9 @@ output:
   markdown::html_format:
     keep_md: true
     meta:
-      css: [default, slides, "Assets/css/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
-      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "Assets/js/lastupdated.js", "Assets/js/mathjax-font.js"]
+      css: [default, slides, "meta-data/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
+      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "meta-data/lastupdated.js", "meta-data/mathjax-font.js"]
+      header-includes: "meta-data/Hypothesis-config.html"
     options:
       number_sections: true
       latex_math: true
@@ -41,19 +42,20 @@ $$\definecolor{grey}{RGB}{177, 159, 149}$$
 ---
 
 ## Hypothesis Testing Procedure
+<!--# style="font-size: 0.9em;"-->
 
-1. Check if the sample size is large enough and determine if a $Z$-test or $T$-test can be performed. For proportion, $Z$-test may be used. For mean, if $\sigma$ is known, the $Z$-test may be used. If $\sigma$ is unknown, the $T$-test may be used.
+1. Check if the sample size is large enough and determine if a $Z$-test or $t$-test can be performed. For proportion, $Z$-test may be used. For mean, if $\sigma$ is known, the $Z$-test may be used. If $\sigma$ is unknown, the $t$-test may be used.
 
 2. State the null and alternative hypothesis. The null hypothesis always contains the equal sign (and possibly together with a less than or greater than symbol, depending on $H_a$.)
 
 3. Set a significance level $\alpha$. Commonly used levels are $\alpha=0.01$, $\alpha=0.05$ and $\alpha=0.1$.
 
-4. Calculate the standardized test statistic: the $Z$-test statistic or the $T$-test statistic.
+4. Calculate the standardized test statistic: the $Z$-test statistic or the $t$-test statistic.
 
 5. Calculate the $P$-value.  
   ::: {.center}
   |Sign in $H_a$ | $\ne$ | $<$ | $>$  |
-  |---|---|---|
+  |---|---|---|---|
   | Test | Two-tailed | Left-tailed | Right-tailed|
   :::
 
@@ -63,7 +65,7 @@ $$\definecolor{grey}{RGB}{177, 159, 149}$$
 
 ---
 
-## Example: Test a Mean with Known SD Using $P$-value (1 of 2)
+## Example: Test a Mean with Known SD (1 of 2)
 
 Residences on a certain street claim that the mean speed of automobiles run through the street is greater than the speed limit of 25 miles per hour. A random sample of 100 automobiles has a mean speed of 26 miles per hour. Assume the population standard deviation is 4 miles per hour. Is there enough evidence to support the claim of the residences at the significance level $\alpha = 0.05$?
 
@@ -77,7 +79,7 @@ Since the population standard deviation is  $\sigma=4$. We use the standard norm
 
 ---
 
-## Example: Test a Mean with Known SD Using $P$-value (2 of 2)
+## Example: Test a Mean with Known SD (2 of 2)
 
 The $Z$-test statistic is $z=\frac{\bar{x}-\mu_0}{\sigma/\sqrt{n}}=\frac{26-25}{4/\sqrt{100}}=2.5$. 
 
@@ -88,11 +90,13 @@ Because the $P$-value is less than the significance level $\alpha=0.05%
 
 At 5% level of significance, there is enough evidence to support the claim of the residences that the average speed of automobile is above the speed limit.
 
-.footmark[Note: Without calculating the \\(Z\\)-test statistic, the \\(P\\)-value can also be calculated by the Excel function `1-NORM.DIST(26, 25, 4/SQRT(100), TRUE)`.]
+::: {.footmark}
+Note: Without calculating the \\(Z\\)-test statistic, the \\(P\\)-value can also be calculated by the Excel function `1-NORM.DIST(26, 25, 4/SQRT(100), TRUE)`.
+:::
 
 ---
 
-## Example: Test a Mean with Unknown SD Using $P$-value
+## Example: Test a Mean with Unknown SD (1 of 2)
 
 **Example:** A certain manufacturer claims that average numbers of candies in a certain sized bag that they produce is 20. To test the claims, you collected a random sample of 10 bags and find the mean is 18 and the standard deviation is 2.7. Assume the numbers of candies are normally distributed. At the significance level $\alpha=0.05$, does your analysis support the manufacturer's claim?
 
@@ -102,13 +106,18 @@ Set $H_0: \mu=20$ and $H_a: \mu\neq 20$.
 
 Since $H_a$ has the $\ne$ sign and the population standard deviation is unknown, we use two-tailed $t$-test. We will find the $P$-value.
 
-The $T$-test statistics is $t=\frac{18-20}{2.7/\sqrt{10}}\approx`r round((18-20)/2.7*sqrt(10), 3)`.$ Using the Excel, we find that the $P$-value is \\(p\approx\\)`2*T.DIST(-2.342,9,TRUE)`=`r round(2*pt(round((18-20)/2.7*sqrt(10), 3),9),4)`.
+---
+
+## Example: Test a Mean with Unknown SD (2 of 2)
+
+The $t$-test statistics is $t=\frac{18-20}{2.7/\sqrt{10}}\approx`r round((18-20)/2.7*sqrt(10), 3)`.$ Using the Excel, we find that the $P$-value is \\(p\approx\\)`2*T.DIST(-2.342,9,TRUE)`=`r round(2*pt(round((18-20)/2.7*sqrt(10), 3),9),4)`.
 
 Since the $P$-value is smaller than the 5% significance level, we reject $H_0$ can conclude that there is enough evidence to deny the manufacturer's claim.
 
 ---
 
-## Example: Test a Mean Using $P$-value from a Data Set (1 of 2)
+## Example: Test a Mean from a Data Set (1 of 2)
+<!--# style="font-size: 0.95em;"-->
 
 An instructor would like to know if the students enrolled in a math course in the  current semester performed better than students in the last semester. The mean final exam from last semester is 75.5. The final exam scores of 40 randomly selected 40 students were obtained
 
@@ -138,14 +147,15 @@ Using Excel functions `AVERAGE()` and `STDEV.S()`, we find the sample mean is $\
 
 ---
 
-## Example: Test a Mean Using $P$-value from a Data Set (2 of 2)
+## Example: Test a Mean from a Data Set (2 of 2)
+<!--# style="font-size: 0.95em;"-->
 
-**Solution: (Continued):** The $T$-test statistic is calculated by
+The $t$-test statistic is calculated by
 $$t=\frac{\bar{x}-\mu_0}{s/\sqrt{n}}=\frac{(78.17-75.5)}{8.39/\sqrt{40}}\approx `r round((78.17-75.5)/8.39*sqrt(40),3)`.$$
 
-Because $H_a$ contains the $>$ sign and $\sigma$ is unknown, we use the right-tailed $T$-test.
+Because $H_a$ contains the $>$ sign and $\sigma$ is unknown, we use the right-tailed $t$-test.
 
-The degree of freedom is $\text{df}=40-1$ The $P$-value is the right tail area under the $T$-curve, that is `1-T.DIST(2.013, 39, TRUE)`=`r round(1-pt(2.013, 39),4)` which can also be obtained by `T.DIST.RT(2.013, 39)`.
+The degree of freedom is $\text{df}=40-1$ The $P$-value is the right tail area under the $t$-curve, that is `1-T.DIST(2.013, 39, TRUE)`=`r round(1-pt(2.013, 39),4)` which can also be obtained by `T.DIST.RT(2.013, 39)`.
 
 Since the $P$-value is less than 5%, at the 5% level of significance, we may reject $H_0$. So at 5% level of significance, there is enough evidence to support the claim that the students in this semester performed significantly better on the final than last semester.
 
@@ -154,17 +164,18 @@ However, if the 2% level of significance is used, with the given data, we fail t
 ---
 
 ## Example: Fairness of a Coin
+<!--# style="font-size: 0.95em;"-->
 
 Suppose you want to determine if a coin is fair. You toss the coin 50 times and observe 16 heads and 34 tails. At the significant level 0.01, do you think that the coin is fair? If not, does the coin favor the head or tail?
 
 **Solution:** Since $n\hat{p}=16$ and $n(1-\hat{p})=34$, a $Z$-test is valid.
 
-To test if the coin is fair, we set the null hypothesis as $H_0$: $p=0.5$. The experiment suggests that we should set the alternative hypothesis as $H_a$: $p<0.5$.
+To test the coin, we set the null hypothesis as $H_0$: $p=0.5$. The experiment suggests that we should set the alternative hypothesis as $H_a$: $p<0.5$.
 
 The test statistic is $\hat{p}=\frac{16}{50}=0.32$ and the standardization is
-$$z=\dfrac{\hat{p}-p_0}{\sqrt{p_0(1-p_0)/n}}=\dfrac{0.32-0.5}{\sqrt{0.5(1-0.5)/50}}\approx `r round((0.32-0.5)/sqrt(0.5*0.5/50),2)`.$$
+$$\textstyle z=\frac{\hat{p}-p_0}{\sqrt{p_0(1-p_0)/n}}=\frac{0.32-0.5}{\sqrt{0.5(1-0.5)/50}}\approx `r round((0.32-0.5)/sqrt(0.5*0.5/50),2)`.$$
 
-From $H_a$, we know that the test is left-tailed. The $P$-value is then `NORM.S.DIST(-2.55,TRUE)`\\(\approx 0.008\\).
+Because $H_a$ contains the $<$ sign, the test is left-tailed and the $P$-value is then `NORM.S.DIST(-2.55,TRUE)`\\(\approx 0.008\\).
 
 Because $0.008<0.01=\alpha$, we reject the null hypothesis $H_0$. Therefore, at the significance level 0.01, there is enough evidence to claim that the coin favors the tail.
 
@@ -178,14 +189,14 @@ Globally the long-term proportion of newborns who are male is 51.46%. A research
 
 To test the researcher's claim, we set the null hypothesis as $H_0$: $p=0.5146$. The experiment suggests that we should set the alternative hypothesis as $H_a$: $p\neq 0.5146$.
 
+---
+
+## Example: Proportion of Newborns (2 of 2)
+
 The standard test statistic is
 $$
 z=\dfrac{\hat{p}-p_0}{\sqrt{p_0(1-p_0)/n}}=\dfrac{0.5255-0.5146}{\sqrt{0.5146\cdot(1-0.5146)/5000}}\approx`r newbornstat=round((0.5255-0.5146)/sqrt(0.5146*(1-0.5146)/5000),4); newbornstat`.
 $$
-
----
-
-## Example: Proportion of Newborns (2 of 2)
 
 From $H_a$, we know that the test is two-tailed. The $P$-value is then
 $$2\cdot(1-P(Z<0.5255))\approx`r 2*(1-round(pnorm(newbornstat, 0,1),3))`$$
@@ -197,7 +208,7 @@ At the significance level 0.01, there is not enough evidence to support the rese
 
 ---
 
-## A Remark on the SE for Sample Proportion in Hypothesis Testing
+## A Remark on the SE for Sample Proportion
 
 In some books, the standard error of the sample distribution of sample proportions assuming that $p=p_0$ is calculated using the approximation
 $$
@@ -208,29 +219,31 @@ An arguable explanation is that using the above value for SE will be consistent 
 
 ---
 
-## Practice: Testing the Mean GPA with known $\sigma$
+## Practice: Testing the Mean GPA with known $\sigma$ {.unnumbered}
 
-`r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=941399&seed=2020&showansafter', height='560px')`
-
----
-
-## Practice: Testing the Mean GPA with Unknown $\sigma$
-
-`r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=941405&seed=2020&showansafter', height='560px')`
+`r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=941399&seed=2020&showansafter', height='500px')`
 
 ---
 
-## Practice: Testing the Proportion of People Who Own Cats
+## Practice: Testing the Mean GPA with Unknown $\sigma$ {.unnumbered}
 
-`r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=33395&seed=2020&showansafter', height='560px')`
+`r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=941405&seed=2020&showansafter', height='500px')`
 
 ---
 
-## Practice: Testing the Mean Recovery Time
+## Practice: Testing the Proportion of People Who Own Cats {.unnumbered}
+
+`r knitr::include_url('https://www.myopenmath.com/embedq2.php?id=1231702&seed=2020&showansafter', height='500px')`
+
+---
+
+## Practice: Testing the Mean Recovery Time {.unnumbered}
 
 The average number of days to complete recovery from a particular type of knee operation is 123.7 days. From his experience a physician suspects that use of a topical pain medication might be lengthening the recovery time. He randomly selects the records of seven knee surgery patients who used the topical medication. The times to total recovery were:
 
-.center[128, 135, 121, 142, 126, 151, 123]
+::: {.center}
+128, 135, 121, 142, 126, 151, 123]
+:::
 
 Assuming a normal distribution of recovery times, perform the relevant test of hypotheses at the 10% level of significance.
 
@@ -242,7 +255,7 @@ Source: [Exercise 15 in Section 8.4 in Introductory Statistics](https://saylordo
 
 ---
 
-<!-- # class = "center middle" -->
+<!--# class="center middle"-->
 
 ::: {.part}
 Lab Instructions in Excel
@@ -250,7 +263,7 @@ Lab Instructions in Excel
 
 ---
 
-## Excel Functions for Normal Distributions
+## Normal Distribution for Hypothesis Testing
 
 - Let $Z$ be a standard normal random varaible. In Excel, $P(Z<z)$ is given by `NORM.S.DIST(z,TRUE)`.
 
@@ -262,17 +275,17 @@ Lab Instructions in Excel
 
 ---
 
-## Excel Functions for $T$-Distributions
+## $t$-Distributions for Hypothesis Testing
 
-Suppose a Student's $T$-distribution has the degree of freedom $\text{df}=n-1$.
+Suppose a Student's $t$-distribution has the degree of freedom $\text{df}=n-1$.
 
-- To find a probability for a given $T$-value
+- To find a probability for a given $t$-value
 
-  - The area of the left tail of the $T$-value may be calculated by the function `T.DIST(t,df,true)`.
+  - The area of the left tail of the $t$-value may be calculated by the function `T.DIST(t,df,true)`.
 
-  - The area of the right tail of the $T$-value may be calculated by the function `T.DIST.RT(t, df)`.
+  - The area of the right tail of the $t$-value may be calculated by the function `T.DIST.RT(t, df)`.
 
-  - The area of two tails of the $T$-value (\\(t>0\\)) may be calculated by function `T.DIST.2T(t,df)`.
+  - The area of two tails of the $t$-value (\\(t>0\\)) may be calculated by function `T.DIST.2T(t,df)`.
 
 - To find the critical value for a given probability $p$
 
@@ -282,6 +295,6 @@ Suppose a Student's $T$-distribution has the degree of freedom $\text{df}=n-1$.
 
 ---
 
-## Lab Practice: Test the hypothesis
+## Lab Practice: A Car Manufacturer's Claim {.unnumbered}
 
 A car manufacturer claims that a new fuel injection design increases the mean mileage on a certain model of car above its current 28.5 miles per gallon level. Twenty-five of the new designs were checked and the mean recorded as 30.0 miles per gallon with a standard deviation of 3.8 miles per gallon. Assume that mean mileages are approximately normally distributed. Evaluate this claim at the 5% level of significance.
