--- a/Topic-6-Two-Way-Tables.Rmd
+++ b/Topic-6-Two-Way-Tables.Rmd
@@ -1,13 +1,14 @@
 ---
-title: "Two-Way Tables and Relations Between Categorical Variables"
+title: "Two-Way Contingency Tables "
 author: "Fei Ye"
 date: '`r format(Sys.time(), "%B %Y")`'
 output:
   markdown::html_format:
     keep_md: true
     meta:
-      css: [default, slides, "Assets/css/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
-      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "Assets/js/lastupdated.js", "Assets/js/mathjax-font.js"]
+      css: [default, slides, "meta-data/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css,heading-anchor.min.css"]
+      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js,external-link.min.js,heading-anchor.min.js", "meta-data/lastupdated.js", "meta-data/mathjax-font.js"]
+      header-includes: "meta-data/Hypothesis-config.html"
     options:
       number_sections: true
       latex_math: true
@@ -41,7 +42,7 @@ output:
 
 - A number in a margin are called **marginal frequency**.
 
-- A numbers in the body of the table is called **joint frequency**.
+- A number in the body of the table is called **joint frequency**.
 
 ---
 
@@ -49,7 +50,7 @@ output:
 
 The following table summarize responses of a random sample of 1,200 U.S. college students as part of a larger survey.
 
-::: {.center}
+::: {.center }
 |                   |  About Right  |  Overweight  |  Underweight  |  Row Totals  |
 | :----------------- | :---------------: | :--------------: | :---------------: | :--------------: |
 | Female        | 560             | 163            | 37              | 760            |
@@ -77,7 +78,7 @@ Source: [https://courses.lumenlearning.com/wmopen-concepts-statistics](https://c
 
 ---
 
-## Example: Joint and marginal probabilities of body image and gender
+## Example: Probabilities about Body and Gender
 
 The following table shows joint and marginal probabilities of body image and gender.
 
@@ -88,10 +89,6 @@ The following table shows joint and marginal probabilities of body image and gen
 | Male            | $\frac{295}{1200}=24.58\%$      | $\frac{72}{1200}=6.00\%$      | $\frac{73}{1200}=6.08\%$       | $\frac{440}{1200}=36.67\%$     |
 | Column   Totals | $\frac{855}{1200}=71.25\%$      | $\frac{235}{1200}=19.58\%$     | $\frac{110}{1200}=9.17\%$       | $\frac{1200}{1200}=100.00\%$    |
 :::
-
----
-
-## Example: Conditional probabilities of body image by gender
 
 The following table shows probabilities of randomly select male or female who has a certain body image.
 
@@ -146,7 +143,7 @@ $P(\text{Male and Info Tech})=\dfrac{564}{12000}=\dfrac{5802}{12000}\cdot \dfrac
 
 ---
 
-## Practice: A table relates weights and heights
+## Practice: Weights and Heights {.unnumbered}
 
 ::::: {.row}
 ::: {.pull-left}
@@ -186,7 +183,7 @@ Source: https://courses.lumenlearning.com/introstats1/chapter/contingency-tables
 
 ---
 
-## Example: Association between body image and gender (1 of 2)
+## Example: Association Between Body and Gender (1 of 2)
 
 Is body image related to gender?
 
@@ -200,7 +197,7 @@ Is body image related to gender?
   
 ---
 
-## Example: Association between body image and gender (2 of 2)
+## Example: Association Between Body and Gender (2 of 2)
 
 **Solution:** Using Excel (stacked bar chart), we may compare side-by-side the conditional body image distributions for females and males
 
@@ -272,7 +269,7 @@ Sometimes, the total frequency can be taken to be 10,000 or a higher power of 10
   
 ---
 
-## Example: Birth gender prediction (1 of 3)
+## Example: Birth Gender Prediction (1 of 3)
 
 A pregnant woman often opts to have an ultrasound to predict the gender of her baby.
 Assume the following facts are known:
@@ -289,9 +286,9 @@ Use the above facts to answer the following questions.
 
 ---
 
-## Example: Birth gender prediction (2 of 3)
+## Example: Birth Gender Prediction (2 of 3)
 
-**Solution:** 
+**Solution:**
 
 Assume that we have ultrasound predictions for 1,000 random babies.
 
@@ -305,7 +302,7 @@ Using those facts, we may create a two-way frequency table.
 
 ---
 
-## Example: Birth gender prediction (3 of 3)
+## Example: Birth Gender Prediction (3 of 3)
 
 ::: {.center}
 |                 |            Girl             |          Boy          |  Row Totals   |
@@ -323,7 +320,7 @@ $$P(\text{Boy} | \text{predict boy}) = \frac{390}{438} \approx 0.890=89\%.$$
 
 ---
 
-## Practice
+## Practice: Highway Safty {.unnumbered}
 
 The table below is based on a 1988 study of accident records conducted by the Florida State Department of Highway Safety.
 ::: {.center}
@@ -342,7 +339,7 @@ Source: [https://courses.lumenlearning.com/wmopen-concepts-statistics](https://c
 
 ---
 
-## Practice: Drug screening
+## Practice: Drug Screening {.unnumbered}
 
 A large company has instituted a mandatory employee drug screening program. Assume that the drug test used is known to be 99% accurate. That is, if an employee is a drug user, the test will come back positive (“drug detected”) 99% of the time. If an employee is a non-drug user, then the test will come back negative (“no drug detected”) 99% of the time. Assume that 2% of the employees of the company are drug users.
 
@@ -376,7 +373,7 @@ Lab Instruction in Excel
 
 ---
 
-## Lab Practice: Gender vs Program Selection
+## Lab Practice: Gender vs Program Selection {.unnumbered}
 
 The following table summarize results from a study on program selection and gender.
 
